@@ -5496,6 +5496,15 @@ name|keySet
 argument_list|()
 argument_list|)
 decl_stmt|;
+comment|// Sort the nodes by space available on them, so that we offer
+comment|// containers on emptier nodes first, facilitating an even spread. This
+comment|// requires holding the scheduler lock, so that the space available on a
+comment|// node doesn't change during the sort.
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
 name|Collections
 operator|.
 name|sort
@@ -5505,6 +5514,7 @@ argument_list|,
 name|nodeAvailableResourceComparator
 argument_list|)
 expr_stmt|;
+block|}
 comment|// iterate all nodes
 for|for
 control|(
